syntax ="proto3";
package calculator;
option go_package = "./";

service	Calculate{
	rpc Add(AddRequest) returns (AddResponse);


}
message AddRequest{
	int64 number1 = 1;
	int64 number2 = 2;
}

message AddResponse{
	int64 result =1;
}
